# beam

./: .travis.yml  CMakeLists.txt  build.sh
beam-hw-crypto/: .gitignore  CMakeLists.txt  README.md  hw_wallet_test.cpp
beam-hw-crypto/beam/: beam.h  crypto.c  crypto.h  debug.c  debug.h  definitions.c  definitions.h  definitions_ipp.c  definitions_ipp_flash.c  functions.c  functions.h  inner_product.c  inner_product.h  internal.c  internal.h  kernel.c  kernel.h  misc.c  misc.h  multi_mac.c  multi_mac.h  nonce_generator.c  nonce_generator.h  oracle.c  oracle.h  rangeproof.c  rangeproof.h  sign.c  sign.h
beam-hw-crypto/crypto_trezor/: memzero.c
beam-hw-crypto/lib/: vec.c  vec.h
beam-hw-crypto/tests/: test_check_beam.c
beam-hw-crypto/tests/beam_tools/: base64.h  definitions_test.c  definitions_test.h
core/: fly_client.cpp  fly_client.h
keykeeper/: local_private_key_keeper.cpp  local_private_key_keeper.h
pow/unittests/: equihash_test.cpp
ui/: ui.cpp
ui/i18n/: be_BY.ts  cs_CZ.ts  de_DE.ts  en_US.ts  es_ES.ts  fi_FI.ts  fr_FR.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  nl_NL.ts  ru_RU.ts  sv_SE.ts  th_TH.ts  tr_TR.ts  vi_VI.ts  zh_CN.ts
ui/viewmodel/: receive_swap_view.cpp
wallet/: cli.cpp
wallet/api/: api.cpp  api.h  api_cli.cpp
wallet/cli/: cli.cpp
wallet/core/: base_transaction.cpp  base_transaction.h  base_tx_builder.cpp  simple_transaction.cpp
wallet/transactions/swaps/: second_side.h  swap_transaction.cpp
wallet/transactions/swaps/bridges/bitcoin/: bitcoin_side.cpp  bitcoin_side.h
wallet/unittests/: swap_test.cpp
